package ua.hillel.lessons.lesson26.grasp.demos._6_polymorphism._02;

public class Animal {

    public void speak() {
        System.out.println("Just some sound");
    }
}
