package ua.hillel.lessons.lesson26.grasp.demos._6_polymorphism._02;

public class Racoon extends Animal {

    public void speak() {
        System.out.println("I am a raccoon. Feed me...");
    }
}
